# transfer

./: MANIFEST.json  README.md  README_REMOTE.md
eval_framework/.claude/plugins/eval-framework/.claude-plugin/: plugin.json
eval_framework/.claude/plugins/eval-framework/agents/: analyze-library.md
eval_framework/.claude/plugins/eval-framework/skills/classify-difficulty/: SKILL.md
eval_framework/.claude/plugins/eval-framework/skills/discover-tests/: SKILL.md
eval_framework/.claude/plugins/eval-framework/skills/generate-yaml/: SKILL.md
eval_framework/.claude/plugins/eval-framework/skills/inspect-function/: SKILL.md
eval_framework/.claude/plugins/eval-framework/templates/: library_config.yaml.tmpl  test_case.yaml.tmpl
eval_framework/ComputeLibrary/: CLAUDE.md  CPU_TEST_CASES.md
eval_framework/ComputeLibrary/.claude/: settings.local.json
eval_framework/configs/: defaults.yaml  isa-l.yaml  sleef.yaml
eval_framework/dav1d/: CLAUDE.md
eval_framework/dav1d-test-data-master/: .gitlab-ci.yml
eval_framework/dav1d-test-data-master/10-bit/: meson.build
eval_framework/dav1d-test-data-master/10-bit/argon/: meson.build
eval_framework/dav1d-test-data-master/10-bit/film_grain/: 422_oddheight.ivf  422_oddwidth.ivf  clip_0.ivf  clip_1.ivf  clip_id.ivf  meson.build
eval_framework/dav1d-test-data-master/12-bit/: meson.build
eval_framework/dav1d-test-data-master/12-bit/argon/: meson.build
eval_framework/dav1d-test-data-master/8-bit/: meson.build
eval_framework/dav1d-test-data-master/8-bit/features/: meson.build
eval_framework/dav1d-test-data-master/8-bit/film_grain/: 420_oddheight.ivf  422_oddheight.ivf  422_oddwidth.ivf  clip_0.ivf  clip_1.ivf  clip_id.ivf  meson.build
eval_framework/dav1d-test-data-master/8-bit/resize/: meson.build
eval_framework/dav1d-test-data-master/8-bit/sframe/: meson.build
eval_framework/dav1d-test-data-master/8-bit/svc/: av1-1-b8-22-svc-L2T1.ivf  av1-1-b8-22-svc-L2T2.ivf  meson.build
eval_framework/dav1d-test-data-master/8-bit/vq_suite/: meson.build
eval_framework/dav1d-test-data-master/multi-bit/: meson.build
eval_framework/dav1d-test-data-master/multi-bit/argon/: meson.build
eval_framework/dav1d/subprojects/checkasm/: .gitlab-ci.yml  .meson-subproject-wrap-hash.txt  meson.build  meson_options.txt
eval_framework/dav1d/subprojects/checkasm/.github/workflows/: build.yml
eval_framework/dav1d/subprojects/checkasm/docs/: meson.build
eval_framework/dav1d/subprojects/checkasm/include/checkasm/: checkasm.h  header_config.h  meson.build  test.h  utils.h
eval_framework/dav1d/subprojects/checkasm/src/: checkasm.c  checkasm_config.asm  checkasm_config.h  cpu.c  cpu.h  function.c  function.h  html_data.h  internal.h  longjmp.h  meson.build  perf.c  signal.c  stats.c  utils.c
eval_framework/dav1d/subprojects/checkasm/src/arm/: asm.S  checkasm_32.S  checkasm_64.S  cpu.c
eval_framework/dav1d/subprojects/checkasm/src/html_data/: body.html  checkasm.css  checkasm.js
eval_framework/dav1d/subprojects/checkasm/src/loongarch/: checkasm.S  loongson_asm.S
eval_framework/dav1d/subprojects/checkasm/src/perf/: linux.c  macos_kperf.c
eval_framework/dav1d/subprojects/checkasm/tests/: generic.c  meson.build
eval_framework/docs/superpowers/plans/: 2026-04-27-eval-framework-implementation.md
eval_framework/docs/superpowers/specs/: 2026-04-27-ai-agent-eval-framework-design-v2.md  2026-04-27-ai-agent-eval-framework-design.md
eval_framework/eigen/.claude/: settings.local.json
eval_framework/eigen/benchmarks/: BENCHMARK_GUIDE.md
eval_framework/faiss/: BUILD.md
eval_framework/isa-l/: 2026-04-25-175754-command-messageflamegraph-analyzercommand-mes.txt  CLAUDE.md  Makefile.unx
eval_framework/isa-l/.claude/commands/flamegraph-analyzer/: SKILL.md  flamegraph.sh
eval_framework/isa-l/crc/aarch64/: crc_multibinary_arm.S
eval_framework/isa-l/misc/: version_test
eval_framework/isa-l/programs/: igzip.1
eval_framework/libjpeg-turbo/: CLAUDE.md  performance_test_cases.md
eval_framework/libsodium/: CLAUDE.md
eval_framework/libsodium/test/: ct.c
eval_framework/sleef/: CLAUDE.md
eval_framework/sleef/.claude/: settings.local.json
eval_framework/sleef/submodules/tlfloat/: winbuild-msvc.bat
eval_framework/sodium_bench/: 3d_weld_encryption_buf_num.gnuplot  3d_weld_encryption_buf_size.gnuplot  CMakeLists.txt  README.md  TEST_GUIDE.md  generate_gnuplot_files.py  result_analysis.sh
eval_framework/sodium_bench/src/: align_crypto_test.hpp  auth_encryption.hpp  authentication.hpp  crypto_functions.cpp  crypto_functions.hpp  data_container.hpp  encryption.hpp  global_buffer_variant.hpp  global_buffers.cpp  global_buffers.hpp  hashes.hpp  main.cpp  multithread_encryption.hpp  multithread_ram_encryption.hpp  sort_tests.hpp  utils.cpp  utils.hpp  weld_arch.cpp  weld_arch.hpp  weld_encrypted_auth.hpp
eval_framework/sodium_bench/src/test/: unit_tests.cpp  unit_tests.hpp
eval_framework/test_library/: isa-l.yaml  sleef.yaml
eval_framework/x264/: CLAUDE.md  PERFORMANCE_TEST.md  checkasm10  checkasm8
scripts/: build.sh  parse_results.py  run_compare.sh
src/common/: blas_case_common.h  sme_abi_stubs.c
src/drivers/: cblas_saxpy_driver.c  cblas_scopy_driver.c  cblas_sdot_driver.c  cblas_sgemm_driver.c  cblas_sgemv_driver.c  cblas_sger_driver.c  cblas_sscal_driver.c  cblas_ssyrk_driver.c
src/optimized/neon/: cblas_saxpy_neon.c  cblas_scopy_neon.c  cblas_sdot_neon.c  cblas_sgemm_neon.c  cblas_sgemv_neon.c  cblas_sger_neon.c  cblas_sscal_neon.c  cblas_ssyrk_neon.c
src/optimized/sme/: cblas_saxpy_sme.c  cblas_scopy_sme.c  cblas_sdot_sme.c  cblas_sgemm_sme.c  cblas_sgemv_sme.c  cblas_sger_sme.c  cblas_sscal_sme.c  cblas_ssyrk_sme.c
src/optimized/sve/: cblas_saxpy_sve.c  cblas_scopy_sve.c  cblas_sdot_sve.c  cblas_sgemm_sve.c  cblas_sgemv_sve.c  cblas_sger_sve.c  cblas_sscal_sve.c  cblas_ssyrk_sve.c
src/original/: cblas_saxpy_scalar.c  cblas_scopy_scalar.c  cblas_sdot_scalar.c  cblas_sgemm_scalar.c  cblas_sgemv_scalar.c  cblas_sger_scalar.c  cblas_sscal_scalar.c  cblas_ssyrk_scalar.c
(+27 files in other folders)
